fix: address code-review findings (validate() wiring, dedup, minor cleanups)
Wires SchedulingProperties.validate() via @PostConstruct so a misconfigured
commander.scheduling entry fails fast at startup instead of surfacing later
as a confusing runtime failure. Extracts the duplicated singleRow() helper
(AgreementScopeRepositoryImpl/ReportConfigRepositoryImpl) into
JdbcRepositorySupport, and the three-times-duplicated boundary-time parser
(ReportingPeriodCalculator/SchedulingProperties/ReportJobScheduleBuilder)
into BoundaryTimes. ReportType now carries its own message-id code instead
of ReportMessageIdGenerator deriving it via a fixed-offset substring.
Standardizes on .getFirst() over .get(0), and drops the wildcard import in
SchedulingProperties. Renames application-testenv.properties to
application-test.properties (test profile) and activates it by default.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>